--- a/p5/index.html
+++ b/p5/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
+    <script src="/static/p5.js"></script>
     <style>
         body,
         html {
