--- a/p5/index.html
+++ b/p5/index.html
@@ -17,15 +17,18 @@
 
     <script>
         var socket;
-        let windata = Array.from({ length: 128 }, () => [0, 0]); // Initialize array
-        let height, width, radius;
+        let windata = Array.from({ length: 128 }, () => [0, 0, 0]); // Initialize array
+        let height, width, radius, sliders;
+        let numberSliders;
+
         const socketMessageListener = (e) => {
             let data = JSON.parse(e.data);
             if (data.loop != undefined) {
                 const loopid = data.loop;
                 const x = Math.min(Math.max(data.x, -1), 1); // Clipping to -1 to 1
                 const y = Math.min(Math.max(data.y, -1), 1);
-                windata[loopid] = [x, y]; // Update windata
+                const db = data.db;
+                windata[loopid] = [x, y, db]; // Update windata
                 // console.log(data.loop, data.x, data.y);
             }
         };
@@ -52,12 +55,42 @@
         });
 
 
+
+
+
+
         function setup() {
             width = windowWidth;
             height = windowHeight;
             radius = height / 10; // Update radius based on new height
             createCanvas(width, height);
             strokeWeight(4);
+
+            numberSliders = 8;
+            sliders = Array.from({ length: numberSliders }, (_, i) => {
+                return {
+                    x: 25,
+                    y: 25 + 35 * (i + 1),
+                    width: 380,
+                }
+            });
+
+            // create a slider for each
+            sliders.forEach((slider, i) => {
+                sliders[i].slider = createSlider(0, 100, 0);
+                sliders[i].slider.position(slider.x, slider.y);
+                sliders[i].slider.style('width', slider.width + "px");
+                sliders[i].slider.style('height', '7px'); // Make the actual slider thin
+                sliders[i].slider.style('opacity', '0.1'); // Make the slider slightly transparent to blend with the sketchy lines
+                // on slider move run function
+                sliders[i].slider.input(() => {
+                    let value = sliders[i].slider.value();
+                    socket.send(JSON.stringify({ action: "slider", index: i, number: value }));
+                });
+                sliders[i].slider.value(100);
+            });
+            sliders[0].slider.value(30);
+
             frameRate(30);
         }
 
@@ -67,7 +100,6 @@
         function draw() {
             blendMode(BLEND);
             background('#fbf8cc'); // Using a color similar to #FFFAD7
-            blendMode(EXCLUSION);
 
             const colors = [
                 invertColor("ffcfd2"),
@@ -77,18 +109,50 @@
                 invertColor("90dbf4"),
                 invertColor("90dbf4"),
                 invertColor("8eecf5"),
-            ]
-            windata.forEach(([x, y], index) => {
+            ];
+
+            // draw all the sliders
+            sliders.forEach((slider, i) => {
+                if (i > 0 && windata[i - 1][0] == 0 && windata[i - 1][1] == 0) {
+                    sliders[i].slider.style('opacity', '0.0');
+                    return;
+                }
+                sliders[i].slider.style('opacity', '0.1');
+                let x1 = slider.x;
+                let x2 = slider.x + slider.width;
+                let y = slider.y;
+                if (i > 0) {
+                    stroke('#' + colors[(i - 1) % colors.length]);
+                }
+                beginShape();
+                for (let x = x1; x < x2; x += 5) {
+                    let y = slider.y + noise(x * 0.01, frameCount * 0.01, i) * 20 - 5;
+                    vertex(x, y);
+                }
+                endShape();
+                // draw a filed circle with perlin noise at the slider value 
+                let value = slider.slider.value();
+                x = map(value, 0, 100, x1, x2);
+                y = slider.y + noise(x * 0.01, frameCount * 0.01, i) * 20 - 5;
+                line(x, y - 10, x, y + 10);
+            });
+
+
+            blendMode(EXCLUSION);
+
+
+            windata.forEach(([x, y, db], index) => {
                 if (x !== 0 || y !== 0) { // Check if data is not the initialized value
                     let mappedX = ((x + 1) / 2) * (width - 3 * radius) + 2 * radius; // Map from -1 to 1 into 0 to width
                     let mappedY = ((y + 1) / 2) * (height - 3 * radius) + 2 * radius; // Map from -1 to 1 into 0 to height
+                    // change opacity based on db
+                    noStroke();
                     fill('#' + colors[index % colors.length]);
-
                     // Begin drawing a sketchy circle using Perlin noise
                     beginShape();
                     for (let angle = 0; angle < TWO_PI; angle += 0.1) {
                         let offset = map(noise(cos(angle) * 0.5 + 1, sin(angle) * 0.5 + 1, frameCount * 0.005 + index), 0, 1, -50, 50);
-                        let noisyRadius = radius + offset + noise(frameCount / 30 * 0.01 + index) * 100;
+                        let noisyRadius = radius * map(db, -64, 0, 0.001, 1) + offset + noise(frameCount / 30 * 0.01 + index) * 100;
                         let x = mappedX + cos(angle) * noisyRadius;
                         let y = mappedY + sin(angle) * noisyRadius;
                         vertex(x, y);
@@ -123,16 +187,18 @@
             strokeWeight(4);
             noFill();
 
-            windata.forEach(([x, y], index) => {
+            windata.forEach(([x, y, db], index) => {
                 if (x !== 0 || y !== 0) { // Check if data is not the initialized value
                     let mappedX = ((x + 1) / 2) * (width - 3 * radius) + 2 * radius; // Map from -1 to 1 into 0 to width
                     let mappedY = ((y + 1) / 2) * (height - 3 * radius) + 2 * radius; // Map from -1 to 1 into 0 to height
 
                     // Begin drawing a sketchy circle using Perlin noise
                     beginShape();
+
+
                     for (let angle = 0; angle < TWO_PI; angle += 0.1) {
                         let offset = map(noise(cos(angle) * 0.4 + 1, sin(angle) * 0.4 + 1, frameCount * 0.006 + index), 0, 1, -50, 50);
-                        let noisyRadius = radius + offset + noise(frameCount / 30 * 0.01 + index) * 100;
+                        let noisyRadius = radius * map(db, -64, 0, 0.001, 1) + offset + noise(frameCount / 30 * 0.01 + index) * 100;
                         let x = mappedX + cos(angle) * noisyRadius;
                         let y = mappedY + sin(angle) * noisyRadius;
                         vertex(x, y);
@@ -141,6 +207,7 @@
                 }
             });
 
+            stroke(0);
 
 
             {
