--- a/p5/index.html
+++ b/p5/index.html
@@ -27,7 +27,7 @@
                 const x = Math.min(Math.max(data.x, -1), 1); // Clipping to -1 to 1
                 const y = Math.min(Math.max(data.y, -1), 1);
                 const db = data.db;
-                windata[loopid + 1] = [x, y, db]; // Update windata
+                windata[loopid + 1] = [-1*x, -1*y, db]; // Update windata
                 // console.log(data.loop, data.x, data.y);
             } else if (data.n != undefined) {
                 addFadingCircle(data.n);
